--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "engines": {
     "node": "0.8.x",
-    "npm":  "1.1.x"
+    "npm": "1.1.x"
   },
   "dependencies": {
     "express": ">0",
@@ -23,5 +23,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bestander/pong-mmo-server"
+  },
+  "volo": {
+    "dependencies": {
+      "facebook-api": "github:bestander/facebook-api/master"
+    }
   }
 }
