--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "underscore": ">0",
     "log4js": ">0"
   },
-  "jam": {
-    "dependencies": {
-      "jquery": ">0"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/bestander/pong-mmo-server"
   },
+  "github": "https://github.com/bestander/facebook-api",
+  "amd": {},
   "volo": {
+    "baseUrl": "www/js/lib",
     "dependencies": {
+      "jquery": "github:jquery/jquery/1.8.2",
+      "requirejs-plugins": "github:millermedeiros/requirejs-plugins/master",
       "facebook-api": "github:bestander/facebook-api/master"
     }
-  }
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
+  ]
 }
