--- a/package.json
+++ b/package.json
@@ -8,28 +8,18 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "express": ">0",
-    "json5": ">0",
-    "nconf": ">0",
-    "ejs": ">0",
-    "underscore": ">0",
-    "log4js": ">0"
+    "express": ">3.0",
+    "json5": "*",
+    "nconf": "*",
+    "ejs": "*",
+    "underscore": "*",
+    "log4js": "*"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/bestander/pong-mmo-server"
   },
   "github": "https://github.com/bestander/facebook-api",
-  "amd": {},
-  "volo": {
-    "baseUrl": "www/js/lib",
-    "dependencies": {
-      "jquery": "github:jquery/jquery/1.8.2",
-      "requirejs-plugins": "github:millermedeiros/requirejs-plugins/master",
-      "facebook-api": "github:bestander/facebook-api/master",
-      "friends-selector": "github:mbrevoort/jquery-facebook-multi-friend-selector/v4"
-    }
-  },
   "licenses": [
     {
       "type": "MIT",
