socket.io and box2d used as a proof of concept. next - setting up canvas client

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ejs": "*",
     "underscore": "*",
     "log4js": "*",
-    "box2d": "*"
+    "box2d": "*",
+    "socket.io": "*"
   },
   "repository": {
     "type": "git",
