--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pong-mmo-server",
   "description": "A MMO facebook Pong game",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
@@ -15,6 +15,7 @@
     "component": "latest",
     "lodash": "latest"
   },
+  "main": "./index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/bestander/pong-mmo-server"
