--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pong-mmo-server",
   "description": "A server for multiplayer game of Pong",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
@@ -11,7 +11,7 @@
     "pong-box2d": "git://github.com/bestander/pong-box2d.git#0.9.11"
   },
   "devDependencies": {
-    "jasmine-node": "1.0.28",
+    "jasmine-node": "latest",
     "component": "latest",
     "lodash": "latest",
     "jasmine-node-sugar": "git://github.com/bestander/jasmine-node-sugar.git#master"
